--- a/app/blocks/verphe-contacts/verphe-contacts.scss
+++ b/app/blocks/verphe-contacts/verphe-contacts.scss
@@ -158,7 +158,7 @@
         position: relative;
         width: 290px;
         transform: none;
-        left: 25%;
+        left: 0;
         bottom: initial;
         margin-top: 58px;
       }
